--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - name: upload build result
         uses: actions/upload-artifact@v2
         with:
-          name: FxDemoApp-${{matrix.os}}
+          name: Fourier-${{matrix.os}}
           path: staging
 
 
